--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -18,26 +18,54 @@
 }
 
 .newsletter {
-  background-color: #03054E;
+  background-color: #00a917;
   max-width: 1528px;
   margin: 0 auto;
+  height: 85px;
+}
+
+.newsletter .form{
+  max-width: fit-content;
+  display: flex;
+  padding: 12px;
 }
 
 .newsletter .container {
   padding: 60px 10px;
 }
 
-.label {
+.newsletter .label {
   color: #fff;
-  font-size: 26px;
+  font-size: 16px;
+  width: 22rem;
+  height: 19px;
+  padding: 22px 10px;
 }
 
 .inputGroup {
-  padding-bottom: 4px;
-  border-bottom: 2px solid #fff;
   display: flex;
   color: #fff;
 }
+
+.newsletter .inputGroup label div{
+  background: #fff;
+  padding: 0px 10px;
+  height: 2rem;
+}
+
+.newsletter .inputGroup input{
+  width: 15rem;
+  color: #000;
+}
+
+.newsletter .inputGroup input::placeholder{
+  color: #d1d1d1;
+}
+
+.newsletter .inputGroup button{
+  min-height: 2rem;
+}
+
 
 .inputGroup input {
   background-color: transparent;
@@ -72,13 +100,34 @@
   top: -50px;
 }
 
-@media only screen and (min-width: 640px) {
-  .newsletter .container {
-    padding: 140px;
-  }
+.sellingPriceValue , .sellingPriceLabel{
+  font-weight: bold;
+  color: #00A917;
+  font-size: 22px;
+}
 
+.productBrand{
+  font-size: 14px;
+  line-height: 15px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.installmentsPrice{
+  color: #002D00;
+}
+
+.installmentsPrice span:nth-child(3){
+  font-weight: bold;
+}
+
+.newsletter .container{
+  padding: 0px;
+}
+
+@media only screen and (min-width: 640px) {
   .label {
-    font-size: 40px;
+    font-size: 20px;
   }
 
   .infoCardContainer--info-card-home .infoCardTextContainer {
