--- a/styles/css/vtex.menu.css
+++ b/styles/css/vtex.menu.css
@@ -148,4 +148,15 @@
 
 
 
-
+@media only screen and (max-width: 640px) {
+    .menuItem{
+        background: #82cec1;
+        color: #fff;
+    }
+    .styledLinkContainer{
+        padding: 1em 0;
+        border-bottom: 1px solid #67b9ab;
+    }
+    .styledLink{color: #fff;}
+    .styledLink *{color:#fff;}
+}
