--- a/styles/css/vtex.minicart.css
+++ b/styles/css/vtex.minicart.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 640px) {
 .container{
     overflow: hidden;
     text-indent: 0;
@@ -45,4 +46,5 @@
     font-size: 17px;
     right: -127px;
     top: -2px;
+}
 }
