--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -66,7 +66,7 @@
 }
 
 .newsletter .inputGroup input{
-  width: 15rem;
+  width: 100%;
   color: #000;
 }
 
@@ -152,5 +152,8 @@
   .imageElement--storePrint {
     margin-bottom: 0px;
     max-height: 600px;
+  }
+  .newsletter .inputGroup input{
+    width: 15rem;
   }
 }
