--- a/styles/css/vtex.store-footer.css
+++ b/styles/css/vtex.store-footer.css
@@ -1,15 +1,17 @@
-.row--menu-row {
-  padding-right: 24px;
-}
+@media only screen and (min-width: 640px) {
+  .row--menu-row {
+    padding-right: 24px;
+  }
 
-.row--menu-row .rowContainer {
-  align-items: flex-start;
-}
+  .row--menu-row .rowContainer {
+    align-items: flex-start;
+  }
 
-.row--payment-methods {
-  padding-top: 16px;
-}
+  .row--payment-methods {
+    padding-top: 16px;
+  }
 
-.acceptedPaymentMethodContainer{
-  margin-left: 10px;
+  .acceptedPaymentMethodContainer{
+    margin-left: 10px;
+  }
 }
