Ajustes de componentes e CSS na Home Desktop

--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -15,4 +15,11 @@
   .flexRow--deals .flexCol {
     align-items: center;
   }
+
+  .flexRow--footerSecond{
+    background-color: #00a917;
+    margin-top: 65px;
+  }
+
+  
 }
