--- a/styles/css/vtex.shelf.css
+++ b/styles/css/vtex.shelf.css
@@ -6,5 +6,17 @@
     display: block;
     margin: 0px 43px;
     width: auto;
-    color: #002D00
+    color: #002D00;
+    position: relative;
+}
+
+.title:after{
+    content: "";
+    background: #fb750d;
+    width: 300px;
+    height: 2px;
+    display: block;
+    position: absolute;
+    bottom: -2px;
+    left: 0px;
 }
