--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,13 +1,15 @@
 .notificationBarContainer {
-  background-color: #E6F1E6;
-  color: #03034E;
+  background: #fff;
+  color: #00a918;
+  font-size: 20px;
+  width: 200px;
   font-weight: 700;
-  font-size: 12px;
-  text-decoration: underline;
+  border: 2px solid #002d00;
+  border-radius: 10px 0px;
 }
 
 .searchBarContainer {
-  max-width: 700px;
+  max-width: 670px;
 }
 
 .infoCardContainer--info-card-home {
@@ -133,10 +135,6 @@
 }
 
 @media only screen and (min-width: 640px) {
-  .logoImage{
-    position: absolute;
-    top: -50px;
-  }  
   .label {
     font-size: 20px;
   }
