--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -2,6 +2,18 @@
   align-self: center;
 }
 
+@media only screen and (max-width: 640px) {
+
+  .flexRow--content-footer-intitucional .stretchChildrenWidth{
+    width:50% !important;
+    display:inline-flex;
+  }
+  .flexRow--content-footer-intitucional .flexColChild{
+    align-self: center;
+  }
+
+}
+
 @media only screen and (min-width: 640px) {
   .flexRow--deals {
     background-color: #a7afbd;
