--- a/styles/css/vtex.store-footer.css
+++ b/styles/css/vtex.store-footer.css
@@ -19,3 +19,13 @@
     margin: 0px 10px;
   }
 }
+
+@media only screen and (max-width: 640px){
+
+  .footerLayout{
+    border-top: 2px solid #eee;
+    padding-top: 1em;
+    background: #f9f9f9;    
+  }  
+
+}
