--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -154,4 +154,41 @@
   .newsletter .inputGroup input{
     width: 15rem;
   }
+
+  .carouselGaleryCursor .image{
+    max-width: 450px;
+    margin: 0px auto;
+  }
+
+  .shareContainer{
+    width: 80%;
+    margin: 0px auto;
+  }
+
+  .productDescriptionContainer{
+    width: 80%;
+    margin: 0px auto 30px;
+  }
+
+}
+
+h1 .productBrand{
+  font-size: 20px;
+}
+
+.productDescriptionContainer h2{
+  border-bottom: 2px solid #c6c6c6;
+  padding: 25px 0px 5px;
+  position: relative;
+  font-size: 18px;
+}
+
+.productDescriptionContainer h2::after{
+  content: "";
+  background: #FB750D;
+  width: 200px;
+  height: 3px;
+  display: block;
+  position: absolute;
+  bottom: -1px;
 }
