--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -172,6 +172,54 @@
 
 }
 
+@media only screen and (min-width: 1015px) {
+
+  .container .priceContainer{
+    width: 100%;
+    background: #f5f5f5;
+    padding: 20px;
+    border-radius: 20px 0;
+    height: 85px;
+    margin: 20px 0px;
+    display: block;
+    position: relative;
+  }
+
+  .container .sellingPriceValue{
+    font-size: 30px;
+    color: #FB750D;
+    width: 100%;
+    text-align: right;
+  }
+
+  .container .sellingPriceLabel{
+    display: none;
+  }
+
+  .container .listPrice{
+    float: left;
+    width: 40%;
+  }
+
+  .container .sellingPrice{
+    float: right;
+    font-size: 34px;
+  }
+
+  .container .installmentsPrice{
+    position: absolute;
+    right: 0px;
+    bottom: -25px;
+  }
+
+  .container .savingPrice{
+    float: left;
+    width: 40%;
+  }
+
+}
+
+
 h1 .productBrand{
   font-size: 20px;
 }
