--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -11,6 +11,7 @@
   .flexRow--content-footer-intitucional .flexColChild{
     align-self: center;
   }
+  .flexColChild--mainPriceContainer{text-align: center;}
 
 }
 
