--- a/styles/css/vtex.minicart.css
+++ b/styles/css/vtex.minicart.css
@@ -51,3 +51,13 @@
     font-size: 14px !important;
 }
 }
+
+@media only screen and (max-width: 640px) {
+    .content *{font-size: .9rem !important;text-align:left !important;}
+    .contentDiscount *{
+        font-size: .8rem !important;
+        font-style: italic;
+        color: #aaa !important;
+        font-weight: normal !important;        
+    }
+}
