--- a/styles/css/vtex.search-result.css
+++ b/styles/css/vtex.search-result.css
@@ -20,3 +20,8 @@
     padding: 0px;
 }
 
+.buttonShowMore button{
+    background: transparent;
+    border: 1px solid #fb750d;
+    color: #fb750d;
+}
