--- a/styles/css/vtex.shelf.css
+++ b/styles/css/vtex.shelf.css
@@ -1,10 +1,10 @@
 .title{
     font-size: 26px;
     border-bottom: solid 2px #ccc;
-    text-align: left !important;
+    text-align: center !important;
     padding: 10px;
     display: block;
-    margin: 0px 43px;
+    margin: 0px 43px 20px;
     width: auto;
     color: #002D00;
     position: relative;
@@ -19,4 +19,13 @@
     position: absolute;
     bottom: -2px;
     left: 0px;
+}
+
+@media only screen and (min-width: 640px) {
+
+    .title{
+        text-align: left !important;
+        margin: 0 43px;
+    }
+
 }
