--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -134,6 +134,44 @@
   padding: 0px;
 }
 
+@media only screen and (max-width: 640px) {
+
+  .newsletter form{
+    display: grid !important;
+  }
+  .newsletter label{
+    width:100% !important;
+    padding: 10px 0 !important;
+  }
+  .newsletter{
+    height: auto;
+  }
+  .newsletter .inputGroup{
+    display: block;
+  }
+  .newsletter .inputGroup label div:nth-child(1){
+    height: 3em;
+  }
+  .newsletter .inputGroup button{
+    border: 1px solid #075011;
+    width: 100%;
+    margin: 1em 0 0;
+    color: #ffffff;
+    background: #095a14; 
+  }
+  .productNameContainer, .priceContainer{text-align: center; }
+  .skuSelectorSubcontainer--quantidade{
+    margin: 1em 0;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+    padding: 1em 0;
+    background: #f9f9f9;    
+  }
+  .skuSelectorItem{background: #fff;}
+  .productDescriptionContainer > div{padding: 0 10px;}
+
+}
+
 @media only screen and (min-width: 640px) {
   .label {
     font-size: 20px;
